--- a/Book/BookApp.Ndro/BookApp.Ndro/View/SearchPage.xaml
+++ b/Book/BookApp.Ndro/BookApp.Ndro/View/SearchPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Title="在线搜索"
-             xmlns:m="clr-namespace:BookApp.Ndro.Model"
+             xmlns:e="clr-namespace:BookAPP.Entity;assembly=BookAPP.Entity"
              xmlns:c="clr-namespace:BookApp.Ndro.Control"
              xmlns:vm="clr-namespace:BookApp.Ndro.ViewModel"
              x:Class="BookApp.Ndro.View.SearchPage">
@@ -13,9 +13,12 @@
         <StackLayout>
             <c:LoadMoreListView ItemsSource="{Binding Path=Data}" RowHeight="120"
                                 SelectionMode="None"
+                                CanLoadMore="True"
+                                ItemTappedCommand="{Binding Path=ItemTappedCommand}"
+                                LoadStatus="{Binding Path=LoadStatus}"
                                 LoadMoreCommand="{Binding Path=LoadNextPageCommand}">
                 <c:LoadMoreListView.ItemTemplate>
-                    <DataTemplate x:DataType="m:BookSearchResultModel">
+                    <DataTemplate x:DataType="e:SearchBookResponse">
                         <ViewCell>
                             <StackLayout HorizontalOptions="Fill" VerticalOptions="CenterAndExpand" Orientation="Horizontal" Margin="0,5">
                                 <Image Source="{Binding Path=CoverURL}" HorizontalOptions="Start" VerticalOptions="FillAndExpand" WidthRequest="70" />
