--- a/Book/Biblioteca del Papa/Themes/Generic.xaml
+++ b/Book/Biblioteca del Papa/Themes/Generic.xaml
@@ -2,11 +2,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Biblioteca_del_Papa.Controls">
-
-
     <Style TargetType="{x:Type local:BottomBtnGroup}">
         <Setter Property="CancelButtonContent" Value="取消"/>
         <Setter Property="ConfirmButtonContent" Value="确定"/>
+        <Setter Property="ButtonMargin" Value="5"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:BottomBtnGroup}">
@@ -14,8 +13,8 @@
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                            <Button Content="{TemplateBinding ConfirmButtonContent}" Command="{TemplateBinding ConfirmCommand}" Margin="{TemplateBinding ButtonMargin}" />
-                            <Button Content="{TemplateBinding CancelButtonContent}" Command="{TemplateBinding CancelCommand}" Margin="{TemplateBinding ButtonMargin}"/>
+                            <Button Content="{TemplateBinding ConfirmButtonContent}" Style="{TemplateBinding ButtonStyle}" Background="Transparent" Command="{TemplateBinding ConfirmCommand}"  Width="75" Height="32" Margin="{TemplateBinding ButtonMargin}" />
+                            <Button Content="{TemplateBinding CancelButtonContent}" Style="{TemplateBinding ButtonStyle}" Background="Transparent" Command="{TemplateBinding CancelCommand}" Width="75" Height="32" Margin="{TemplateBinding ButtonMargin}"/>
                         </StackPanel>
                     </Border>
                 </ControlTemplate>
