移除第三方控件库

--- a/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
+++ b/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
@@ -13,7 +13,7 @@
     <Grid>
         <DockPanel>
             <DockPanel DockPanel.Dock="Left" Width="200">
-                <controls:BottomBtnGroup DockPanel.Dock="Bottom" BorderBrush="Gainsboro" BorderThickness="1" CancelButtonContent="删除" ConfirmButtonContent="新增" ConfirmCommand="{s:Action Method=AddBook}" FontSize="14" ButtonStyle="{StaticResource ButtonRevealStyle}"/>
+                <controls:BottomBtnGroup DockPanel.Dock="Bottom" BorderBrush="Gainsboro" BorderThickness="1" CancelButtonContent="删除" ConfirmButtonContent="新增" ConfirmCommand="{s:Action Method=AddBook}" FontSize="14"/>
                 <TreeView x:Name="Bookrack" ItemsSource="{Binding Path=CategoryShowEntityCollection}" SelectedItemChanged="{s:Action Method=TreeView_SelectedItemChanged}">
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate DataType="{x:Type entities:CategoryShowEntity}" ItemsSource="{Binding Path=Books}">
