--- a/Book/Biblioteca del Papa/Pages/BookSearchView.xaml
+++ b/Book/Biblioteca del Papa/Pages/BookSearchView.xaml
@@ -1,4 +1,4 @@
-﻿<fw:AcrylicWindow x:Class="Biblioteca_del_Papa.Pages.BookSearchView"
+﻿<Window x:Class="Biblioteca_del_Papa.Pages.BookSearchView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,25 +7,24 @@
         xmlns:s="https://github.com/canton7/Stylet"
         xmlns:controls="clr-namespace:Biblioteca_del_Papa.Controls"
         xmlns:entities="clr-namespace:Biblioteca_del_Papa.Entities"
-        xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
         mc:Ignorable="d"
         Title="在线搜索"
         ShowInTaskbar="False"
         ResizeMode="NoResize"
         d:DataContext="{d:DesignInstance local:BookSearchViewModel}"
         Height="350" Width="600">
-    <fw:AcrylicWindow.Resources>
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonRevealStyle}">
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
             <Setter Property="Width" Value="75"/>
             <Setter Property="Height" Value="32"/>
             <Setter Property="Background" Value="Transparent"/>
         </Style>
-    </fw:AcrylicWindow.Resources>
-    <Grid fw:PointerTracker.Enabled="True" Background="#70FFFFFF">
+    </Window.Resources>
+    <Grid Background="#70FFFFFF">
         <DockPanel Margin="5">
             <DockPanel DockPanel.Dock="Top" Margin="0,5">
                 <Button Content="搜索" DockPanel.Dock="Right" Command="{s:Action Method=DoSearch}" Margin="5"/>
-                <TextBox Text="{Binding Path=Keyword,UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Margin="5" KeyDown="{s:Action Method=InputKeydown}" Style="{StaticResource TextBoxRevealStyle}"/>
+                <TextBox Text="{Binding Path=Keyword,UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Margin="5" KeyDown="{s:Action Method=InputKeydown}"/>
             </DockPanel>
             <!--<controls:BottomBtnGroup Margin="0,5" DockPanel.Dock="Bottom" BorderBrush="Gainsboro" BorderThickness="1" CancelCommand="{s:Action Method=Cancel}" ConfirmCommand="{s:Action Method=Determine}"/>-->
             <ListBox ItemsSource="{Binding Path=SearchResults}"
@@ -51,4 +50,4 @@
             </ListBox>
         </DockPanel>
     </Grid>
-</fw:AcrylicWindow>
+</Window>
