--- a/Book/Biblioteca del Papa/Pages/CatalogView.xaml
+++ b/Book/Biblioteca del Papa/Pages/CatalogView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Biblioteca_del_Papa.Pages"
+             xmlns:entities="clr-namespace:Biblioteca_del_Papa.Entities"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:CatalogViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -12,8 +13,19 @@
             <TextBlock Text="{Binding Path=Book.BookName}" FontSize="18" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
             <TextBlock Text="{Binding Path=Book.Author}" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
             <TextBlock Text="{Binding Path=Book.BookName}" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
-            <ScrollViewer HorizontalScrollBarVisibility="Disabled">
-                <ItemsControl ItemsSource="{Binding Path=Book.Chapters}"/>
+            <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden" Focusable="False">
+                <ItemsControl ItemsSource="{Binding Path=Book.Chapters}" HorizontalContentAlignment="Center" HorizontalAlignment="Center">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate DataType="{x:Type entities:ChapterInfo}">
+                            <Button Content="{Binding Path=Title}" Focusable="False" ToolTip="{Binding Path=Title}" Margin="10,5" Width="200" BorderBrush="Transparent" BorderThickness="0"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </ScrollViewer>
         </DockPanel>
     </Grid>
