--- a/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
+++ b/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
@@ -6,15 +6,17 @@
              xmlns:local="clr-namespace:Biblioteca_del_Papa.Pages"
              xmlns:controls="clr-namespace:Biblioteca_del_Papa.Controls"
              xmlns:entities="clr-namespace:Biblioteca_del_Papa.Entities"
+             xmlns:fa="http://schemas.fontawesome.io/icons/"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:s="https://github.com/canton7/Stylet"
-             d:DataContext="{d:DesignInstance local:BibliotecaViewModel}">
+             d:DataContext="{d:DesignInstance local:BibliotecaViewModel}">    
     <Grid>
         <DockPanel>
             <DockPanel DockPanel.Dock="Left" Width="200">
                 <controls:BottomBtnGroup DockPanel.Dock="Bottom" BorderBrush="Gainsboro" BorderThickness="1" CancelButtonContent="删除" ConfirmButtonContent="新增" ConfirmCommand="{s:Action Method=AddBook}" FontSize="14"/>
                 <TreeView x:Name="Bookrack"
+                          Style="{StaticResource BaseTreeViewStyle}"
                           ItemsSource="{Binding Path=CategoryShowEntityCollection}"
                           MouseDoubleClick="{s:Action Method=TreeView_MouseDoubleClick}">
                     <TreeView.ItemTemplate>
@@ -28,8 +30,9 @@
                                                 <MenuItem Header="更新" Command="{Binding Path=RenewCommand}" CommandParameter="{Binding}"/>
                                             </ContextMenu>
                                         </StackPanel.ContextMenu>
-                                        <TextBlock Text="{Binding Path=BookName}"/>
+                                        <TextBlock Text="{Binding Path=BookName}" x:Name="bookName"/>
                                         <TextBlock Text="{Binding Path=Author,StringFormat={}({0})}"/>
+                                        <fa:ImageAwesome Icon="Spinner" Spin="True" SpinDuration="2" Width="{Binding ElementName=bookName,Path=FontSize}" Margin="2,0" FlipOrientation="Normal" Visibility="{Binding Path=Renewing,Converter={StaticResource BooleanToVisibilityConverter}}"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </HierarchicalDataTemplate.ItemTemplate>
