--- a/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
+++ b/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
@@ -7,16 +7,48 @@
              xmlns:controls="clr-namespace:Biblioteca_del_Papa.Controls"
              xmlns:entities="clr-namespace:Biblioteca_del_Papa.Entities"
              xmlns:fa="http://schemas.fontawesome.io/icons/"
+             xmlns:ts="clr-namespace:Biblioteca_del_Papa.TemplateSelectors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:s="https://github.com/canton7/Stylet"
-             d:DataContext="{d:DesignInstance local:BibliotecaViewModel}">    
+             d:DataContext="{d:DesignInstance local:BibliotecaViewModel}">
+    <UserControl.Resources>
+        <ts:BookShowTemplateSelector x:Key="BookShowTemplateSelector">
+            <ts:BookShowTemplateSelector.CatalogTemplate>
+                <DataTemplate DataType="{x:Type entities:BookShowEntity}">
+                    <DockPanel>
+                        <TextBlock Text="{Binding Path=Book.BookName}" FontSize="18" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
+                        <TextBlock Text="{Binding Path=Book.Author}" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
+                        <TextBlock Text="{Binding Path=Book.BookName}" HorizontalAlignment="Center" DockPanel.Dock="Top"/>
+                        <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden" Focusable="False">
+                            <ItemsControl ItemsSource="{Binding Path=Book.Chapters}" HorizontalContentAlignment="Center" HorizontalAlignment="Center">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate DataType="{x:Type entities:ChapterInfo}">
+                                        <Button Content="{Binding Path=Title}" Focusable="False" ToolTip="{Binding Path=Title}" Margin="10,5" Width="200" Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Command="{Binding Path=ShowChapterCommand}" CommandParameter="{Binding}"/>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </ScrollViewer>
+                    </DockPanel>
+                </DataTemplate>
+            </ts:BookShowTemplateSelector.CatalogTemplate>
+            <ts:BookShowTemplateSelector.ChapterTemplate>
+                <DataTemplate DataType="{x:Type entities:ChapterShowEntity}">
+                    <TextBlock Text="{Binding}"/>
+                </DataTemplate>
+            </ts:BookShowTemplateSelector.ChapterTemplate>
+        </ts:BookShowTemplateSelector>
+    </UserControl.Resources>
     <Grid>
         <DockPanel>
             <DockPanel DockPanel.Dock="Left" Width="200">
                 <controls:BottomBtnGroup DockPanel.Dock="Bottom" BorderBrush="Gainsboro" BorderThickness="1" CancelButtonContent="删除" ConfirmButtonContent="新增" ConfirmCommand="{s:Action Method=AddBook}" FontSize="14"/>
                 <TreeView x:Name="Bookrack"
-                          Style="{StaticResource BaseTreeViewStyle}"
                           ItemsSource="{Binding Path=CategoryShowEntityCollection}"
                           MouseDoubleClick="{s:Action Method=TreeView_MouseDoubleClick}">
                     <TreeView.ItemTemplate>
@@ -40,7 +72,7 @@
                     </TreeView.ItemTemplate>
                 </TreeView>
             </DockPanel>
-            <ContentControl s:View.Model="{Binding Path=MainContentViewModel}"/>
+            <ContentControl Content="{Binding Path=MainContentViewModel}" ContentTemplateSelector="{StaticResource BookShowTemplateSelector}"/>
         </DockPanel>
     </Grid>
 </UserControl>
