--- a/Book/Biblioteca del Papa/Styles/TreeViewStyle.xaml
+++ b/Book/Biblioteca del Papa/Styles/TreeViewStyle.xaml
@@ -85,7 +85,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="{x:Type TreeViewItem}"
+    <Style x:Key="BaseTreeViewItemStyle"
        TargetType="{x:Type TreeViewItem}">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalContentAlignment" Value="{Binding Path=HorizontalContentAlignment,RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
