--- a/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
+++ b/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
@@ -18,6 +18,12 @@
                 <TreeView x:Name="Bookrack"
                           ItemsSource="{Binding Path=CategoryShowEntityCollection}"
                           MouseDoubleClick="{s:Action Method=TreeView_MouseDoubleClick}">
+                    <TreeView.ItemContainerStyle>
+                        <Style TargetType="{x:Type TreeViewItem}">
+                            <Setter Property="IsSelected" Value="{Binding IsSelected}" />
+                            <Setter Property="IsExpanded" Value="{Binding IsExpanded}"/>
+                        </Style>
+                    </TreeView.ItemContainerStyle>
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate DataType="{x:Type entities:CategoryShowEntity}" ItemsSource="{Binding Path=Books}">
                             <TextBlock Text="{Binding Path=CategoryName}"/>
@@ -26,13 +32,13 @@
                                     <StackPanel Orientation="Horizontal">
                                         <StackPanel.ContextMenu>
                                             <ContextMenu>
-                                                <MenuItem Header="更新" Command="{Binding Path=RenewCommand}" CommandParameter="{Binding}"/>
-                                                <MenuItem Header="下载所有空白章节"/>
+                                                <MenuItem Header="更新" Command="{s:Action Method=Renew}" CommandParameter="{Binding}"/>
+                                                <MenuItem Header="下载所有空白章节" Command="{s:Action Method=DownloadAllBlankchapters}" CommandParameter="{Binding}"/>
                                             </ContextMenu>
                                         </StackPanel.ContextMenu>
                                         <TextBlock Text="{Binding Path=BookName}" x:Name="bookName"/>
                                         <TextBlock Text="{Binding Path=Author,StringFormat={}({0})}"/>
-                                        <fa:ImageAwesome Icon="Spinner" Spin="True" SpinDuration="2" Width="{Binding ElementName=bookName,Path=FontSize}" Margin="2,0" FlipOrientation="Normal" Visibility="{Binding Path=Renewing,Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                        <fa:ImageAwesome Icon="Spinner" Spin="True" SpinDuration="2" Width="{Binding ElementName=bookName,Path=FontSize}" Margin="2,0" FlipOrientation="Normal" Visibility="{Binding Path=Updating,Converter={StaticResource BooleanToVisibilityConverter}}"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </HierarchicalDataTemplate.ItemTemplate>
