--- a/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
+++ b/Book/Biblioteca del Papa/Pages/BibliotecaView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Biblioteca_del_Papa.Pages.BibliotecaView"
+﻿<UserControl xmlns:cui="https://cui.bugmaker.xyz"  x:Class="Biblioteca_del_Papa.Pages.BibliotecaView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -39,7 +39,8 @@
                                         </StackPanel.ContextMenu>
                                         <TextBlock Text="{Binding Path=BookName}" x:Name="bookName"/>
                                         <TextBlock Text="{Binding Path=Author,StringFormat={}({0})}"/>
-                                        <fa:ImageAwesome Icon="Spinner" Spin="True" SpinDuration="2" Width="{Binding ElementName=bookName,Path=FontSize}" Margin="2,0" FlipOrientation="Normal" Visibility="{Binding Path=Updating,Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                        <!--<fa:ImageAwesome Icon="Spinner" Spin="True" SpinDuration="2" Width="{Binding ElementName=bookName,Path=FontSize}" Margin="2,0" FlipOrientation="Normal" Visibility="{Binding Path=Updating,Converter={StaticResource BooleanToVisibilityConverter}}"/>-->
+                                        <cui:ProgressRing MinHeight="10" Height="10" MinWidth="10" Width="10" IsLarge="False" Margin="2,0" IsActive="{Binding Path=Updating}" Visibility="{Binding Path=Updating,Converter={StaticResource BooleanToVisibilityConverter}}"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </HierarchicalDataTemplate.ItemTemplate>
