添加新控件

--- a/Book/CUI/Themes/Generic.xaml
+++ b/Book/CUI/Themes/Generic.xaml
@@ -4,5 +4,6 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CUI;component/Themes/ProgressRing.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/CUI;component/Themes/BusyBox.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/CUI;component/Themes/CWindow.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
