--- a/Book/CUITests/MainWindow.xaml
+++ b/Book/CUITests/MainWindow.xaml
@@ -1,14 +1,44 @@
-﻿<Window xmlns:cui="https://cui.bugmaker.xyz"  x:Class="CUITests.MainWindow"
+﻿<cui:CWindow xmlns:cui="https://cui.bugmaker.xyz"  x:Class="CUITests.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CUITests"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Window.Resources>
-    </Window.Resources>
+             SupportTranslucent="True"
+             Background="Red"
+        Title="MainWindow" Height="450" Width="800" Style="{DynamicResource CWindowStyle}">
+    <cui:CWindow.Resources>
+        <!--Control colors.-->
+        <Color x:Key="WindowColor">#FFE8EDF9</Color>
+
+        <Style x:Key="CWindowStyle" TargetType="{x:Type cui:CWindow}">
+            <Setter Property="WindowStyle" Value="None"/>
+            <Setter Property="AllowsTransparency" Value="True"/>
+            <Setter Property="Background">
+                <Setter.Value>
+                    <SolidColorBrush Color="{DynamicResource WindowColor}"/>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type cui:CWindow}">
+                        <Grid Background="{TemplateBinding Background}">
+                            <AdornerDecorator>
+                                <ContentPresenter />
+                            </AdornerDecorator>
+                            <ResizeGrip x:Name="WindowResizeGrip" HorizontalAlignment="Right" VerticalAlignment="Bottom" Visibility="Collapsed" IsTabStop="false" />
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="ResizeMode" Value="CanResizeWithGrip">
+                                <Setter TargetName="WindowResizeGrip" Property="Visibility" Value="Visible" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </cui:CWindow.Resources>
     <Grid>
-        <cui:BusyBox RingHeight="60" RingWidth="60" IsActive="True"/>
     </Grid>
-</Window>
+</cui:CWindow>
