--- a/Book/CUITests/MainWindow.xaml
+++ b/Book/CUITests/MainWindow.xaml
@@ -1,44 +1,36 @@
-﻿<cui:CWindow xmlns:cui="https://cui.bugmaker.xyz"  x:Class="CUITests.MainWindow"
+﻿<cui:GlassWindow xmlns:cui="https://cui.bugmaker.xyz"  x:Class="CUITests.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CUITests"
         mc:Ignorable="d"
-             SupportTranslucent="True"
-             Background="Red"
-        Title="MainWindow" Height="450" Width="800" Style="{DynamicResource CWindowStyle}">
-    <cui:CWindow.Resources>
-        <!--Control colors.-->
-        <Color x:Key="WindowColor">#FFE8EDF9</Color>
-
-        <Style x:Key="CWindowStyle" TargetType="{x:Type cui:CWindow}">
-            <Setter Property="WindowStyle" Value="None"/>
-            <Setter Property="AllowsTransparency" Value="True"/>
-            <Setter Property="Background">
-                <Setter.Value>
-                    <SolidColorBrush Color="{DynamicResource WindowColor}"/>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type cui:CWindow}">
-                        <Grid Background="{TemplateBinding Background}">
-                            <AdornerDecorator>
-                                <ContentPresenter />
-                            </AdornerDecorator>
-                            <ResizeGrip x:Name="WindowResizeGrip" HorizontalAlignment="Right" VerticalAlignment="Bottom" Visibility="Collapsed" IsTabStop="false" />
-                        </Grid>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="ResizeMode" Value="CanResizeWithGrip">
-                                <Setter TargetName="WindowResizeGrip" Property="Visibility" Value="Visible" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </cui:CWindow.Resources>
+     Background="#59195FA6"
+        Title="MainWindow" Height="450" Width="800">
+    <!--<cui:GlassWindow.TitleBackContent>
+        --><!--标题栏高度会根据类容自适应，窗口背景透明色决定内容区域是否透明--><!--
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="200" />
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="1" Grid.ColumnSpan="1" Width="100" Height="Auto" Background="Gray" HorizontalAlignment="Right"/>
+            <Rectangle Grid.Column="0" Grid.ColumnSpan="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Fill="#596C6C6C" Width="200" Height="100"/>
+        </Grid>
+    </cui:GlassWindow.TitleBackContent>
+    <cui:GlassWindow.TitleRightContent>
+        <StackPanel Orientation="Horizontal">
+            <Button Content="ces" Width="30" Height="25"/>
+            <Button Content="c3e" Width="30" Height="25"/>
+        </StackPanel>
+    </cui:GlassWindow.TitleRightContent>
+    <cui:GlassWindow.TitleLeftContent>
+        <StackPanel Orientation="Horizontal">
+            <Button Content="cl1" Width="30" Height="25"/>
+            <Button Content="cl2" Width="30" Height="25"/>
+        </StackPanel>
+    </cui:GlassWindow.TitleLeftContent>-->
     <Grid>
     </Grid>
-</cui:CWindow>
+</cui:GlassWindow>
